--- a/CloudService/CloudService/Info.plist
+++ b/CloudService/CloudService/Info.plist
@@ -27,6 +27,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>定位</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
