--- a/CloudService/Podfile
+++ b/CloudService/Podfile
@@ -13,7 +13,7 @@ pod 'MJExtension'
 pod 'MJRefresh'
 pod 'LazyPageScrollView'
 pod 'SDWebImage'
-#pod 'LBXScan', '~> 1.1.1'
+pod 'LBXScan', '~> 1.1.1'
 # 主模块(必须)
 pod 'ShareSDK3'
 # Mob 公共库(必须) 如果同时集成SMSSDK iOS2.0:可看此注意事项：http://bbs.mob.com/thread-20051-1-1.html
